Add register template

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="#">Login</a></li>
                 </ul>
             </div>
@@ -29,7 +29,7 @@
         <!--Mobile collapse navbar-->
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
-            <li><a href="#">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
             <li><a href="#">Login</a></li>
         </ul>
     </header>
