--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
                     <li><a href="{{ url_for('register') }}">Register</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="{{ url_for('login')}}">Login</a></li>
                 </ul>
             </div>
         </nav>
@@ -30,7 +30,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="{{ url_for('login')}}">Login</a></li>
         </ul>
     </header>
 
