--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Register</h3>
+    <h3 class="center-align">Log In</h3>
 
     <div class="row">
-        <form class="col s6 s6 offset-s3" method="POST" action="{{ url_for('register') }}">
+        <form class="col s6 s6 offset-s3" method="POST" action="{{ url_for('login') }}">
             <div class="card-panel">
                 <!-- username -->
                 <div class="row">
@@ -22,7 +22,7 @@
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s4 s4 offset-s4 btn-small yellow darken-2 text-shadow">Register</button>
+                    <button type="submit" class="col s4 m4 offset-m4 btn-small yellow darken-2 text-shadow">Log In</button>
                 </div>
             </div>
         </form>
@@ -30,8 +30,8 @@
 
     <div class="row">
         <div class="col s6 s6 offset-s3">
-            <p class="center-align">Already Registered?
-                <a href="{{ url_for('login') }}" class="yellow-text text-darken-2">Log In</a>
+            <p class="center-align">New Here?
+                <a href="{{ url_for('register') }}" class="yellow-text text-darken-2">Register Account</a>
             </p>
         </div>
     </div>
