--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
                     <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('add_joke')}}">Submit A Joke</a></li>
                         <li><a href="{{ url_for('logout')}}">Log Out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('register') }}">Register</a></li>
@@ -36,6 +37,7 @@
             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('add_joke')}}">Submit A Joke</a></li>
                 <li><a href="{{ url_for('logout')}}">Log Out</a></li>
             {% else %}
                 <li><a href="{{ url_for('register') }}">Register</a></li>
