--- a/templates/add_joke.html
+++ b/templates/add_joke.html
@@ -21,8 +21,8 @@
         <!--joke description-->
         <div class="row">
             <div class="input-field col s12">
-                <textarea id="textarea1" class="materialize-textarea validate" required></textarea>
-                <label for="textarea1">Textarea</label>
+                <textarea id="joke_description" name="joke_description" class="materialize-textarea validate" required></textarea>
+                <label for="joke_description">Joke Description</label>
             </div>
         </div>
         <!-- credit joke to -->
@@ -31,14 +31,6 @@
                 <textarea id="created_by" name="created_by" minlength="5" maxlength="200"
                     class="materialize-textarea validate" required></textarea>
                 <label for="created_by">Credit Joke To:</label>
-                <form action="#">
-                    <p>
-                        <label for="anonymous">
-                            <input type="checkbox" class="filled-in" id="anonymous" name="anonymous" />
-                            <span>Anonymous</span>
-                        </label>
-                    </p>
-                </form>
             </div>
         </div>
       <!-- submit button -->
