--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
     <header>
         <!--Main navbar-->
         <nav>
-            <div class="nav-wrapper yellow darken-2">
-                <a href="{{ url_for('get_jokes') }}" class="brand-logo center black-text">Laugh Out Loud!</a>
+            <div class="nav-wrapper yellow darken-3">
+                <a href="{{ url_for('get_jokes') }}" class="brand-logo center white-text">Laugh Out Loud!</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
@@ -44,6 +44,15 @@
                 <li><a href="{{ url_for('login')}}">Log In</a></li>
             {% endif %}
         </ul>
+        <div class="row">
+            <div class="col s12">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="static/images/laughter01.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <section>
@@ -61,7 +70,7 @@
 
     <main class="container">
     {% block content %}
-        
+         
     {% endblock %}
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" 
