Changing the navbar color, font color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
-.navbar {
-    margin-bottom: 15px;
+nav ul a {
+    color: gray;
 }
 
 .flashes h4 {
@@ -13,3 +13,4 @@
 .card-image img {
     height: 500px;
 }
+
