--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" 
         integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" type="text/css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     {% block styles %}
     {% endblock %}
     <title>Laugh Out Loud!</title>
@@ -16,9 +18,9 @@
     <header>
         <!--Main navbar-->
         <nav>
-            <div class="nav-wrapper yellow darken-3">
-                <a href="{{ url_for('get_jokes') }}" class="brand-logo center white-text">Laugh Out Loud!</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+            <div class="nav-wrapper white lighten-2">
+                <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text">Laugh Out Loud!</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right grey-text "><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
                     {% if session.user %}
