Changed layout of jokes template to separate cards

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-nav ul a {
+nav ul a{
     color: gray;
 }
 
@@ -14,3 +14,6 @@ nav ul a {
     height: 500px;
 }
 
+.btn-small {
+    margin: 10px;
+}
