--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Log In</h3>
+    <h3 class="center-align grey-text">Log In</h3>
 
     <div class="row">
         <form class="col s6 s6 offset-s3" method="POST" action="{{ url_for('login') }}">
@@ -13,7 +13,7 @@
 						<label for="username">Username</label>
 					</div>
                 </div>
-                <!-- passowrd -->
+                <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">	
                         <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
@@ -22,7 +22,7 @@
                 </div>
                 <!-- register -->
                 <div class="row">
-                    <button type="submit" class="col s4 m4 offset-m4 btn-small yellow darken-2 text-shadow">Log In</button>
+                    <button type="submit" class="col s4 m4 offset-m4 btn-small yellow darken-2">Log In</button>
                 </div>
             </div>
         </form>
@@ -30,7 +30,7 @@
 
     <div class="row">
         <div class="col s6 s6 offset-s3">
-            <p class="center-align">New Here?
+            <p class="center-align grey-text">New Here?
                 <a href="{{ url_for('register') }}" class="yellow-text text-darken-2">Register Account</a>
             </p>
         </div>
