--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h3 class="center-align">Register</h3>
+    <h3 class="center-align grey-text">Register</h3>
 
     <div class="row">
         <form class="col s6 s6 offset-s3" method="POST" action="{{ url_for('register') }}">
@@ -30,7 +30,7 @@
 
     <div class="row">
         <div class="col s6 s6 offset-s3">
-            <p class="center-align">Already Registered?
+            <p class="center-align grey-text">Already Registered?
                 <a href="{{ url_for('login') }}" class="yellow-text text-darken-2">Log In</a>
             </p>
         </div>
