--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -24,7 +24,7 @@
                 <div>
                 {% if session.user|lower == joke.created_by|lower %}
                     <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
-                    <a href="" class="btn-small red darken-2">Delete</a>
+                    <a href="{{ url_for('delete_joke', joke_id=joke._id)}}" class="btn-small red darken-2">Delete</a>
                 {% endif %}
                     <form action="#">
                         <label>
