--- a/templates/jokes.html
+++ b/templates/jokes.html
@@ -2,6 +2,23 @@
 {% block content %}
 
 
+    <div class="row card-panel grey lighten-5">
+        <form action="{{ url_for('search') }}" method="POST" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search Jokes</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_jokes') }}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="yellow darken-1 btn text-shadow">
+                        <i class="fas fa-search left"></i> Search
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>    
     <div class="row section">
         <!--joke category panel-->
         <div class="col s3">
@@ -13,6 +30,9 @@
                 <a href="#!" class="collection-item grey-text text-darken-2">Insult Jokes</a>
                 <a href="#!" class="collection-item grey-text text-darken-2">Relationship Jokes</a>
             </div>
+        {% if jokes|length > 0 %}
+         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+        {% endif %}
         </div>
         <div class="col s9">
         {% for joke in jokes %}
