--- a/templates/word_jokes.html
+++ b/templates/word_jokes.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-
     <div class="row card-panel grey lighten-5">
         <form action="{{ url_for('search') }}" method="POST" class="col s12">
             <div class="row valign-wrapper center-align">
@@ -18,33 +17,35 @@
                 </div>
             </div>
         </form>
-    </div>    
+    </div>
+    <div class="col s9 grey-text text-darken-2 center-align">
+        <h3>Word Play Jokes</h3>
+    </div>
     <div class="row section">
         <!--joke category panel-->
         <div class="col s3">
             <div class="collection">
-                <a href="#!" class="collection-item grey-text text-darken-2">Yo Momma Jokes</a>
-                <a href="#!" class="collection-item grey-text text-darken-2">Word Play Jokes</a>
+                <a href="{{ url_for('yo_jokes') }}" class="collection-item grey-text text-darken-2">Yo Momma Jokes</a>
+                <a href="{{ url_for('word_jokes') }}" class="collection-item grey-text text-darken-2">Word Play Jokes</a>
                 <a href="{{ url_for('family_jokes') }}" class="collection-item grey-text text-darken-2">Family Jokes</a>
                 <a href="{{ url_for('food_jokes') }}" class="collection-item grey-text text-darken-2">Food Jokes</a>
                 <a href="{{ url_for('insult_jokes') }}" class="collection-item grey-text text-darken-2">Insult Jokes</a>
-                <a href="#!" class="collection-item grey-text text-darken-2">Relationship Jokes</a>
+                <a href="{{ url_for('relationship_jokes') }}" class="collection-item grey-text text-darken-2">Relationship Jokes</a>
             </div>
         </div>
-    {% if jokes|length > 0 %}
         <div class="col s9">
-        {% for joke in jokes %}
+            {% for joke in jokes %}
             <div class="card">
                 <div class="card-content">
                     <p class="">{{ joke.joke_description }}</p><br>
                     <p class="">by: {{ joke.created_by }}</p><br>
                 </div>
                 <div>
-                {% if session.user|lower == joke.created_by|lower %}
+                    {% if session.user|lower == joke.created_by|lower %}
                     <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
                     <!-- Modal Trigger -->
                     <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
-                    
+    
                     <!-- Modal Structure -->
                     <div id="modal1" class="modal">
                         <div class="modal-content">
@@ -54,27 +55,25 @@
                             <a href="{{ url_for('delete_joke', joke_id=joke._id)}}"
                                 class="modal-close btn-small red">Delete</a>
                             <a href="{{ url_for('get_jokes') }}" class="btn-small grey text-shadow">
-                        Cancel</a>
+                                Cancel</a>
                         </div>
                     </div>
-                {% endif %}
+                    {% endif %}
                     <form action="#">
                         <label>
                             <input type="checkbox" class="filled-in" />
                             <span class="bookmark">Bookmark</span>
                         </label>
-                        <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_satisfied</i></a>
-                        <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_dissatisfied</i></a>
+                        <a href="#!" class="face-icon secondary content"><i
+                                class="material-icons right">sentiment_very_satisfied</i></a>
+                        <a href="#!" class="face-icon secondary content"><i
+                                class="material-icons right">sentiment_very_dissatisfied</i></a>
                     </form>
-                </div>   
+                </div>
             </div>
-        {% endfor %} 
+            {% endfor %}
         </div>
-    {% else %}
-        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
-    {% endif %}
     </div>
 
-    
 
 {% endblock %}
