--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,6 +11,63 @@
             </div>
         </div>
     </div>
+    <!--Search-->
+    <div class="row card-panel grey lighten-5">
+        <form action="{{ url_for('search') }}" method="POST" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search Jokes</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('get_jokes') }}" class="red btn text-shadow">Reset</a>
+                    <button type="submit" class="yellow darken-1 btn text-shadow">
+                        <i class="fas fa-search left"></i> Search
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
 
-
+    <div class="row section">
+        <!--joke category panel-->
+        <div class="col s3">
+            <div class="collection">
+                <a href="{{ url_for('get_jokes') }}" class="collection-item grey-text text-darken-2">Home - Joke Bank</a>
+                <a href="{{ url_for('family_jokes') }}" class="collection-item grey-text text-darken-2">Family Jokes</a>
+                <a href="{{ url_for('food_jokes') }}" class="collection-item grey-text text-darken-2">Food Jokes</a>
+                <a href="{{ url_for('insult_jokes') }}" class="collection-item grey-text text-darken-2">Insult Jokes</a>
+                <a href="{{ url_for('relationship_jokes') }}" class="collection-item grey-text text-darken-2">Relationship Jokes</a>
+                <a href="{{ url_for('word_jokes') }}" class="collection-item grey-text text-darken-2">Word Play Jokes</a>
+                <a href="{{ url_for('yo_jokes') }}" class="collection-item grey-text text-darken-2">Yo Momma Jokes</a>
+            </div>
+        </div>
+    {% if jokes|length > 0 %}
+        <div class="col s9">
+            {% for joke in jokes %}
+            <div class="card">
+                <div class="card-content">
+                    <p class="">{{ joke.joke_description }}</p><br>
+                    <p class="">by: {{ joke.created_by }}</p><br>
+                </div>
+                <div>
+                    <form action="#">
+                        <label>
+                            <input type="checkbox" class="filled-in" />
+                            <span class="bookmark">Bookmark</span>
+                        </label>
+                        <a href="#!" class="face-icon secondary content"><i
+                                class="material-icons right">sentiment_very_satisfied</i></a>
+                        <a href="#!" class="face-icon secondary content"><i
+                                class="material-icons right">sentiment_very_dissatisfied</i></a>
+                    </form>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    {% else %}
+        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+    {% endif %}
+    </div>
 {% endblock %}
