Updated bookmark code in templates

--- a/templates/add_joke.html
+++ b/templates/add_joke.html
@@ -33,7 +33,14 @@
                 <label for="created_by">Credit Joke To:</label>
             </div>
         </div>
-      <!-- submit button -->
+        <!--Bookmark-->
+        <div class="row">
+            <label for="bookmark">
+                <input type="checkbox" class="filled-in bookmark" name="bookmark" id="bookmark" />
+                <span class="bookmark">Bookmark</span>
+            </label>              
+        </div>
+        <!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large light-blue darken-1 text-shadow">Submit A Joke</button>
