--- a/templates/edit_joke.html
+++ b/templates/edit_joke.html
@@ -44,9 +44,9 @@
          <!--Bookmark-->
         <div class="row">
             <label for="bookmark">
-                <input type="checkbox" class="filled-in bookmark" name="bookmark" id="bookmark" />
+                <input type="checkbox" class="filled-in bookmark" name="bookmark" id="bookmark" checked/>
                 <span class="bookmark">Bookmark</span>
-            </label>              
+            </label>         
         </div>
         <!-- submit button -->
         <div class="row">
