--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col s6 s6 offset-s3">
             <div class="card-panel">
-                <h3 class="center-align yellow-text text-darken-2">
+                <h3 class="center-align grey-text yellow-darken-3">
                     {{ username }}'s Profile
                 </h3>
             </div>
