--- a/templates/profile.html
+++ b/templates/profile.html
@@ -52,19 +52,36 @@
                     <p class="">by: {{ joke.created_by }}</p><br>
                 </div>
                 <div>
-                    <form action="#">
-                        <label>
-                            <input type="checkbox" class="filled-in" />
-                            <span class="bookmark">Bookmark</span>
-                        </label>
-                        <a href="#!" class="face-icon secondary content"><i
-                                class="material-icons right">sentiment_very_satisfied</i></a>
-                        <a href="#!" class="face-icon secondary content"><i
-                                class="material-icons right">sentiment_very_dissatisfied</i></a>
-                    </form>
-                </div>
+                {% if session.user|lower == joke.created_by|lower %}
+                    <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
+                    <!-- Modal Trigger -->
+                    <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
+                    
+                    <!-- Modal Structure -->
+                    <div id="modal1" class="modal">
+                        <div class="modal-content">
+                            <h4>Are you sure you want to delete this joke?</h4>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="{{ url_for('delete_joke', joke_id=joke._id)}}"
+                                class="modal-close btn-small red">Delete</a>
+                            <a href="{{ url_for('get_jokes') }}" class="btn-small grey text-shadow">
+                        Cancel</a>
+                        </div>
+                    </div>
+                {% endif %}
+                {% if session.user %}
+                    {% if joke._id in users_bookmark %}
+                        <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="remove_bookmark">Added</a>
+                    {% else %}
+                        <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="add_bookmark">Bookmark</a>
+                    {% endif %}
+                {% endif %}
+                <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_satisfied</i></a>
+                <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_dissatisfied</i></a>
+                </div>  
             </div>
-            {% endfor %}
+        {% endfor %} 
         </div>
     {% else %}
         <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
