--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
                     {% if session.user %}
-                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('coll_bookmarks', username=session['user']) }}">Collection</a></li>
                         <li><a href="{{ url_for('add_joke')}}">Submit A Joke</a></li>
                         <li><a href="{{ url_for('logout')}}">Log Out</a></li>
                     {% else %}
@@ -38,7 +38,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
             {% if session.user %}
-                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('coll_bookmarks', username=session['user']) }}">Collection</a></li>
                 <li><a href="{{ url_for('add_joke')}}">Submit A Joke</a></li>
                 <li><a href="{{ url_for('logout')}}">Log Out</a></li>
             {% else %}
