Deleted bookmark checkbox from add_joke and edit_joke pages

--- a/templates/coll_bookmarks.html
+++ b/templates/coll_bookmarks.html
@@ -43,6 +43,7 @@
                 <a href="{{ url_for('yo_jokes') }}" class="collection-item grey-text text-darken-2">Yo Momma Jokes</a>
             </div>
         </div>
+        <h1>{{ jokes }}</h1>
     {% if jokes|length > 0 %}
         <div class="col s9">
             {% for joke in jokes %}
@@ -52,7 +53,6 @@
                     <p class="">by: {{ joke.created_by }}</p><br>
                 </div>
                 <div>
-                
                     <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
                     <!-- Modal Trigger -->
                     <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
@@ -69,16 +69,10 @@
                         Cancel</a>
                         </div>
                     </div>
-                
-                
-                    {% if joke._id in users_bookmark %}
                         <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="remove_bookmark">Added</a>
-                    {% else %}
                         <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="add_bookmark">Bookmark</a>
-                    {% endif %}
-                
-                <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_satisfied</i></a>
-                <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_dissatisfied</i></a>
+                        <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_satisfied</i></a>
+                        <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_dissatisfied</i></a>
                 </div>  
             </div>
         {% endfor %} 
