--- a/templates/coll_bookmarks.html
+++ b/templates/coll_bookmarks.html
@@ -49,13 +49,15 @@
                     <p class="">{{ bookmark_joke.joke_description }}</p><br>
                     <p class="">by: {{ bookmark_joke.created_by }}</p><br>
                 </div> 
-                <div>
-                    <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
+                <div class="row">
+                    <div class="col s9">
+                <!--{% if session.user|lower == joke.created_by|lower %}
+                        <a href="{{ url_for('edit_joke', joke_id=joke._id)}}" class="btn-small green darken-2">Edit</a>
                     <!-- Modal Trigger -->
-                    <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
+                    <!--    <a class="btn-small red modal-trigger" href="#modal1">Delete</a>
                     
                     <!-- Modal Structure -->
-                    <div id="modal1" class="modal">
+                    <!--   <div id="modal1" class="modal">
                         <div class="modal-content">
                             <h4>Are you sure you want to delete this joke?</h4>
                         </div>
@@ -65,14 +67,18 @@
                             <a href="{{ url_for('get_jokes') }}" class="btn-small grey text-shadow">
                         Cancel</a>
                         </div>
-                    </div>
+                        </div>
+                {% endif %}-->  
                         {% if joke._id in users_bookmark %}
                             <a href="{{ url_for('remove_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="remove_bookmark">Added</a>
                         {% else %}
                             <a href="{{ url_for('add_bookmark', joke_id=joke._id)}}" class="btn btn-small teal lighten-1 white-text bold" id="add_bookmark">Bookmark</a>
                         {% endif %}
+                    </div>
+                    <div class="col s3">
                         <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_satisfied</i></a>
                         <a href="#!" class="face-icon secondary content"><i class="material-icons right">sentiment_very_dissatisfied</i></a>
+                    </div>
                 </div>  
             </div>
         {% endfor %}
