--- a/templates/base.html
+++ b/templates/base.html
@@ -17,23 +17,25 @@
 <body>
     <header>
         <!--Main navbar-->
-        <nav>
-            <div class="nav-wrapper white lighten-2">
-                <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text">Laugh Out Loud!</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right grey-text "><i class="fas fa-bars"></i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
-                    {% if session.user %}
-                        <li><a href="{{ url_for('coll_bookmarks', username=session['user']) }}">Collection</a></li>
-                        <li><a href="{{ url_for('add_joke')}}">Submit A Joke</a></li>
-                        <li><a href="{{ url_for('logout')}}">Log Out</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('register') }}">Register</a></li>
-                        <li><a href="{{ url_for('login')}}">Log In</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper white lighten-2">
+                    <a href="{{ url_for('get_jokes') }}" class="brand-logo center grey-text">Laugh Out Loud!</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right grey-text "><i class="fas fa-bars"></i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
+                        {% if session.user %}
+                            <li><a href="{{ url_for('coll_bookmarks', username=session['user']) }}">Collection</a></li>
+                            <li><a href="{{ url_for('add_joke')}}">Submit A Joke</a></li>
+                            <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('register') }}">Register</a></li>
+                            <li><a href="{{ url_for('login')}}">Log In</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
+        </div>
         <!--Mobile collapse navbar-->
         <ul class="sidenav" id="mobile-demo">
             <li><a href="{{ url_for('get_jokes') }}">Home</a></li>
