--- a/templates/coll_bookmarks.html
+++ b/templates/coll_bookmarks.html
@@ -32,7 +32,7 @@
     <div class="row section">
         <!--joke category panel-->
         <div class="col s3">
-            <div class="collection">
+            <div class="collection z-depth-1">
                 <a href="{{ url_for('get_jokes') }}" class="collection-item grey-text text-darken-2">Home - Joke Bank</a>
                 <a href="{{ url_for('family_jokes') }}" class="collection-item grey-text text-darken-2">Family Jokes</a>
                 <a href="{{ url_for('food_jokes') }}" class="collection-item grey-text text-darken-2">Food Jokes</a>
